# constellation

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  dist-workspace.toml  release-plz.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: aur.yml  ci.yml  release-plz.yml  release.yml
examples/: bench_search.rs  smoke.rs
packaging/aur/: README.md
packaging/aur/constellation-bin/: PKGBUILD
src/: dto.rs  http.rs  index.rs  lib.rs  main.rs  parser.rs  pty.rs  scanner.rs  search.rs
static/: app.js  index.html  search.mjs  styles.css
tests/: http_integration.rs  js_search.rs  search.test.mjs
tests/fixtures/sessions/: command_first.jsonl  malformed.jsonl  minimal.jsonl  no_title.jsonl  with_meta.jsonl  with_tools.jsonl  with_usage.jsonl
